KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Leaves__c/Jio_Employee_Leaves__c.object-meta.xml
<CustomObject>
    <label>Jio Employee Leaves</label>
    <nameField>
        <displayFormat>JELRID{00}</displayFormat>
        <label>Jio Employee Leaves</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jio Employee Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>