KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Leaves__c/fields/Employee_name__c.field-meta.xml
<CustomField>
    <fullName>Employee_name__c</fullName>
    <label>Employee name</label>
    <referenceTo>Jio_Employee_Details__c</referenceTo>
    <relationshipLabel>Jio Employee Leaves</relationshipLabel>
    <relationshipName>Jio_Employee_Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>