KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Jio_Employee_Leaves__c/fields/Number_Of_Days_Leaves_Applied__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_Leaves_Applied__c</fullName>
    <formula>(End_Date__c -  Start_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Days Leaves Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>